Fixed header spacing?

--- a/css/resume_style.css
+++ b/css/resume_style.css
@@ -83,7 +83,7 @@ body {
     color: #555555; }
   .pageheader .mailing {
     margin-top: 10px;
-    margin-left: 20px; }
+    margin-left: 15px; }
     .pageheader .mailing address {
       font-size: 3.5mm; }
   .pageheader address {
