--- a/sass/_resume_rules.scss
+++ b/sass/_resume_rules.scss
@@ -142,7 +142,7 @@ body {
     }
     .mailing {
         margin-top: 10px;
-        margin-left: 20px;
+        margin-left: 15px;
         address {
             font-size: 3.5mm;
         }
